# oss-repo-template

./: bio.md  index.md  lab1.md
labs/lab-01/: report.md
labs/lab-02/: Lab2.md
labs/lab-03/: .lab3.md.swp  lab3.md  out.html
labs/lab-04/: lab4.md
labs/lab-05/: CMakeLists.txt  CMakeLists2.txt  CMakeLists3.txt  CMakeLists5.txt  CMakeLists5Math.txt  CMakeListsFinal.txt  CMakeListsMath3.txt  Makefile  lab5.md  testOutput.txt  tutorial.cxx
labs/lab-06/: Dockerfile  lab6.md  lab6.txt
labs/lab-07/: lab7.md  lab7.txt  part1.py  plot_words.py
labs/lab-08/: lab8.md
labs/lab-09/: 1.py  lab8.md  test.py
